- invalidating scale caches on locale changes
- making QwtTextLabel aware of style sheets
- QwtInterval::widthL introduced
- no QwtPlotZoomer::zoomed signals when the zoom rectangle has not changed
- QwtPlotBarChart::columnRect introduced
- QwtPlotRenderer: using QPdfWriter where possible
- QwtPainter::devivePixelRatio added
- qwtFuzzyGreaterOrEqual/qwtFuzzyLessOrEqual removed, qwtCubicPolynom added
- new color maps for hue/saturation/value, color map for alpha values fixed
- QwtPlotSpectrogram::setMaxRGBTableSize added
- QwtPlotCurve::closestPoint is virtual now
- QwtPlotCurve: polygon clipping includes the painter clip
- QwtPlotCurve: aggressive weeding added - a fast weeding algo for huge datasets with increasing x or y values
- QwtSymbol fine tuning of QwtSymbol::AutoCache 
- A new implementation of various spline interpolations
- QwtRasterData::setInterval/interval changed into a pure virtual getter
- QwtPlotCurve::setLegendAttributes added
- Not aligning unknown paint engines ( f.e EMF )
- QwtNullPaintDevice is using a different type than QPaintEngine::User now
- QwtAbstractScale::setPenWidth extended by isCosmetic
- qwtGetMin/qwtGetMax removed, qwtFloor/qwtCeil added